DesafioPricing/force-app/main/default/objects/Freight__c/fields/DistributionCenter__c.field-meta.xml
<CustomField>
    <fullName>DistributionCenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup para centro de distribuição.</description>
    <label>DistributionCenter</label>
    <referenceTo>DistributionCenter__c</referenceTo>
    <relationshipLabel>Freight</relationshipLabel>
    <relationshipName>Freight</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>