DesafioPricing/force-app/main/default/objects/Freight__c/fields/FreightCode__c.field-meta.xml
<CustomField>
    <fullName>FreightCode__c</fullName>
    <description>Código único de frete.</description>
    <externalId>true</externalId>
    <label>FreightCode</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>