DesafioPricing/force-app/main/default/objects/Freight__c/fields/ProductHierarchy__c.field-meta.xml
<CustomField>
    <fullName>ProductHierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup para Hierarquia do Produto.</description>
    <label>ProductHierarchy</label>
    <referenceTo>ProductHierarchy__c</referenceTo>
    <relationshipLabel>Freight</relationshipLabel>
    <relationshipName>Freight</relationshipName>
    <type>Lookup</type>
</CustomField>