DesafioPricing/force-app/main/default/objects/Freight__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup para estado.</description>
    <label>State</label>
    <referenceTo>State__c</referenceTo>
    <relationshipLabel>Freight</relationshipLabel>
    <relationshipName>Freight</relationshipName>
    <type>Lookup</type>
</CustomField>