DesafioPricing/force-app/main/default/objects/Freight__c/validationRules/Campos_Obrigatorios_Frete.validationRule-meta.xml
<ValidationRule>
    <fullName>Campos_Obrigatorios_Frete</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISBLANK(DistributionCenter__c),
ISBLANK(FreightValue__c)
)</errorConditionFormula>
    <errorMessage>Erro de Cadastro: Todo frete precisa ter um Centro de Distribuição, Status e Valor definidos.</errorMessage>
</ValidationRule>