DesafioPricing/force-app/main/default/objects/Freight__c/validationRules/Frete_ativo.validationRule-meta.xml
<ValidationRule>
    <fullName>Frete_ativo</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Status__c, &quot;Ativo&quot;) &amp;&amp; 
(ISCHANGED(Product__c) || ISCHANGED(ProductHierarchy__c) || ISCHANGED(FreightValue__c) || ISCHANGED(DistributionCenter__c) || ISCHANGED(State__c) || ISCHANGED(City__c) || ISCHANGED(Country__c))</errorConditionFormula>
    <errorMessage>Este registro de Frete está Ativo e não permite edições. Para alterar o valor, mude o status para Rascunho ou crie um novo registro.</errorMessage>
</ValidationRule>